--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,16 @@ readme = "README.md"
 packages = [{include = "tkan"}]  
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = ">=3.9,<3.11"
 keras = "^3.0.0"
 keras_efficient_kan = "^0.1.9"
+tensorflow-io-gcs-filesystem = "0.27.0"
+tensorflow = "^2.18.0"
+pandas = "^2.2.3"
+matplotlib = "^3.9.2"
+scikit-learn = "^1.5.2"
+pyarrow = "^18.0.0"
+mne = "^1.8.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
