--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ matplotlib = "^3.9.2"
 scikit-learn = "^1.5.2"
 pyarrow = "^18.0.0"
 mne = "^1.8.0"
+pyyaml = "^6.0.2"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
